--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@types/react": "^17.0.4",
     "@types/styled-components": "^5.1.9",
-    "babel-plugin-styled-components": "^1.12.0"
+    "babel-plugin-styled-components": "^1.12.0",
+    "css-loader": "^5.2.4",
+    "ts-loader": "^9.1.2"
   }
 }
