--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 API_URL=https://pokeapi.co/api/v2/
 IMAGE_API_URL=https://raw.githubusercontent.com/HybridShivam/Pokemon/master/assets/images/
+IMAGE_API_TYPE_URL=https://raw.githubusercontent.com/HybridShivam/Pokemon/master/assets/Others/type-icons/
