--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-simple-infinite-loading": "^1.1.0",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4"
   },
