--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-simple-infinite-loading": "^1.1.0",
+    "react-use": "^17.2.4",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4"
   },
