--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "10.2.0",
     "next-compose-plugins": "^2.2.1",
     "next-images": "^1.7.0",
+    "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
