--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,11 @@
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
-  "start_url": "/",
+  "start_url": "/?utm_source=homescreen",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
-      "sizes": "72x72",
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
