--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "fullscreen",
   "orientation": "portrait",
   "scope": "/",
-  "start_url": "/?utm_source=homescreen",
+  "start_url": "/",
   "icons": [
     {
       "src": "/android-chrome-512x512.png",
