--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Pokédex",
   "short_name": "Pokédex",
-  "theme_color": "rgba(5,5,5,0.5)",
+  "theme_color": "#e5e5e5",
   "background_color": "#e5e5e5",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
