--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Pokédex",
   "theme_color": "rgba(5,5,5,0.5)",
   "background_color": "#e5e5e5",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
